# transcriber

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh
core/: ffmpeg_utils.py
tests/: test.py
transcriber/: __init__.py  api.py  cli.py  ffmpeg_utils.py  process.py  srt_writer.py
